--- a/Project_3/accordion-alpine-js/index.html
+++ b/Project_3/accordion-alpine-js/index.html
@@ -1,52 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>JS Work</title> 
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Accordion Alpine.js</title>
 </head>
 <body>
-    <div class="accordion">
-        <div class="contentBx">
-            <div class="label">sunt aut facere repellat provident occaecati excepturi optio reprehenderit</div>
-            <div class="container">
-                <img src="images/mountain.png" alt="mountain">
-                <div class="content">
-                    <p>quia et suscipit suscipit recusandae consequuntur expedita et cum reprehenderit molestiae ut ut quas totam nostrum rerum est autem sunt rem eveniet architecto</p>
-                </div>
-            </div>        
-            <div class="label">qui est esse</div>
-            <div class="container">
-                <img src="images/mountain.png" alt="mountain">
-                <div class="content">
-                    <p>est rerum tempore vitae sequi sint nihil reprehendert dolor beatae ex dolores neque fugiat blanditiis voluptate porro vel nihil molestiae ut reiciendis qui aperiam non debitis possimus qui neque nisi nulla</p>
-                </div>
-            </div>
-            <div class="label">ea molestias quasi exercitationem repellat qui ipsa sit aut</div>
-            <div class="container">
-                <img src="images/mountain.png" alt="mountain">
-                <div class="content">
-                    <p>quia et suscipit suscipit recusandae consequuntur expedita et cum reprehenderit molestiae ut ut quas totam nostrum rerum est autem sunt rem eveniet architecto</p>
-                </div>
-            </div>
-            <div class="label">eum et est occaecati</div>
-            <div class="container">
-                <img src="images/mountain.png" alt="mountain">
-                <div class="content">
-                    <p>quia et suscipit suscipit recusandae consequuntur expedita et cum reprehenderit molestiae ut ut quas totam nostrum rerum est autem sunt rem eveniet architecto</p>
-                </div>
-            </div>
-            <div class="label">nesciunt quas odio</div>
-            <div class="container">
-                <img src="images/mountain.png" alt="mountain">
-                <div class="content">
-                    <p>quia et suscipit suscipit recusandae consequuntur expedita et cum reprehenderit molestiae ut ut quas totam nostrum rerum est autem sunt rem eveniet architecto</p>
-                </div>
-            </div>
-        </div>
+  <!-- Written in Alpine.js -->
+
+<div class="all-accordion">
+  <div x-data="{ open: false }" class="accordion">
+    <div class="accordion-header" @click="open = !open">
+      <h>sunt aut facere repellat provident occaecati excepturi optio reprehenderit</h>
+      <span class="icon" x-text="open ? '➖' : '➕'"></span>
     </div>
-    <script src="script.js"></script>
+    <div class="accordion-content" x-show="open">
+      <img class="dağ" src="images/mountain.png" alt="Resim">
+      <p>quia et suscipit suscipit recusandae consequuntur expedita et cum reprehenderit molestiae ut ut quas totam nostrum rerum est autem sunt rem eveniet architecto</p>
+    </div>
+  </div>
+  <div x-data="{ open: false }" class="accordion">
+    <div class="accordion-header" @click="open = !open">
+      <h>qui est esse</h>
+      <span class="icon" x-text="open ? '➖' : '➕'"></span>
+    </div>
+    <div class="accordion-content" x-show="open">
+      <img class="dağ" src="images/mountain.png" alt="Resim">
+      <p>est rerum tempore vitae sequi sint nihil reprehendert dolor beatae ex dolores neque fugiat blanditiis voluptate porro vel nihil molestiae ut reiciendis qui aperiam non debitis possimus qui neque nisi nulla</p>
+    </div>
+  </div>
+  <div x-data="{ open: false }" class="accordion">
+    <div class="accordion-header" @click="open = !open">
+      <h>ea molestias quasi exercitationem repellat qui ipsa sit aut</h>
+      <span class="icon" x-text="open ? '➖' : '➕'"></span>
+    </div>
+    <div class="accordion-content" x-show="open">
+      <img class="dağ" src="images/mountain.png" alt="Resim">
+      <p>dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. at vero eos et accusam et justo duo dolores et ea rebum.</p>
+    </div>
+  </div>
+  <div x-data="{ open: false }" class="accordion">
+    <div class="accordion-header" @click="open = !open">
+      <h>eum et est occaecati</h>
+      <span class="icon" x-text="open ? '➖' : '➕'"></span>
+    </div>
+    <div class="accordion-content" x-show="open">
+      <img class="dağ" src="images/mountain.png" alt="Resim">
+      <p>stet clita kasd gub rgren, no sea takimata sanctus est lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut lab ore sit et dolore magna.</p>
+    </div>
+  </div>
+  <div x-data="{ open: false }" class="accordion">
+    <div class="accordion-header" @click="open = !open">
+      <h>nesciunt quas odio</h>
+      <span class="icon" x-text="open ? '➖' : '➕'"></span>
+    </div>
+    <div class="accordion-content" x-show="open">
+      <img class="dağ" src="images/mountain.png" alt="Resim">
+      <p>quia et suscipit suscipit recusandae consequuntur expedita et cum reprehenderit molestiae ut ut quas totam nostrum rerum est autem sunt rem eveniet architecto</p>
+    </div>
+  </div>
+</div>
+  <script src="https://cdn.jsdelivr.net/npm/alpinejs@2.8.2/dist/alpine.js" defer></script>
 </body>
 </html>
